# scade-pyalmgw

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README.rst  index.html  pyproject.toml  robots.txt  sitemap.xml  tox.ini  versions.json
.github/: dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci_cd.yml  label.yml
doc/changelog.d/: 1.added.md  10.documentation.md  12.added.md  14.fixed.md  15.fixed.md  17.fixed.md  19.maintenance.md  2.maintenance.md  20.fixed.md  23.fixed.md  25.dependencies.md  26.maintenance.md  27.test.md  28.dependencies.md  3.dependencies.md  37.miscellaneous.md  4.maintenance.md  5.added.md  7.dependencies.md  8.test.md
doc/source/: changelog.rst  conf.py  contributing.rst  index.rst
doc/source/getting-started/: index.rst
doc/source/usage/: implementation.rst  index.rst  registration.rst  schema.rst
src/ansys/scade/pyalmgw/: __init__.py  connector.py  documents.py  llrs.py  stub.py  utils.py
tests/: .gitignore  conftest.py  test_connector.py  test_documents.py  test_llrs.py  test_stub.py
tests/Display/: Behavior.etp  Behavior.vsw  Definitions.dgfx  Display.etp  Object.ogfx  P.xscade  Specification.sgfx  font_table.sft
tests/DisplayLLRS/: Definitions.dgfx  DisplayLLRS.almgp  DisplayLLRS.etp  Empty.ogfx  Object.ogfx  One.sgfx  Two.sgfx  sample.json
tests/Empty/: Empty.etp  Empty.xscade
tests/EqSets/: EqSets.almgp  EqSets.etp  EqSets.vsw  P.xscade
tests/Integration/: Integration.almgp  Integration.etp  Integration.vsw  P.xscade
tests/LLRSettings/: Absolute.etp  Default.almgp  Default.etp  Relative.etp
tests/QteLLRS/: Alias.sss  Init.sss  Model.vsw  P.stp  Preamble.sss  QteLLRS.almgp  QteLLRS.etp  Root.xscade  Scenario.sss  qte_all.json
tests/Records/: Model.etp  Model.vsw  P1.stp  P2.stp  Records.almgp  Records.etp  Records.vsw
tests/ScadeLLRS/: .gitignore  ExportLLRs.bat  P.ann  P.xscade  Remark.aty  ScadeLLRS.almgp  ScadeLLRS.etp  ScadeLLRS.vsw  TraceabilityEqs.aty  scade_all.json
tests/Schemas/: P.xscade  Schemas.almgp  Schemas.etp  Schemas.vsw  attribute_oid.json  attribute_path.json  attribute_value.json  class.json  filter.json  folder.json  nofolder.json  nosibling.json  nosort.json  path_error_end.json  path_error_start.json  path_error_syntax.json  path_error_unknown.json  role.json  sibling.json  sort.json
tests/System/: Nature.aty  System.almgp  System.di  System.etp  System.notation  System.uml  System.vsw
tests/ref/: display.json  display_llrs.json  empty.xml  empty_docs.xml  empty_sections.xml  eq_sets.json  eq_sets_llrs.json  qte_llrs.json  records.json  requirements.xml  scade_llrs.json  schema_attribute_oid.json  schema_attribute_path.json  schema_attribute_value.json  schema_class.json  schema_filter.json  schema_folder.json  schema_nofolder.json  schema_nosibling.json  schema_nosort.json  schema_role.json  schema_sibling.json  schema_unknown.json  stub.almgw.xml  system.json
tests/res/: stub.links.json
version/: index.html
version/1.0/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/1.0/_sources/: changelog.rst.txt  index.rst.txt
version/1.0/_static/: search.json
version/1.0/api/: index.html
version/1.0/getting_started/: index.html
version/1.0/usage/: implementation.html  index.html  registration.html  schema.html  tutorial.html
version/1.1/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/1.1/_sources/: changelog.rst.txt  contributing.rst.txt
version/1.1/_sources/api/: index.rst.txt
version/1.1/_sources/usage/: schema.rst.txt
version/1.1/_static/: search.json
version/1.1/api/: index.html
version/1.1/getting-started/: index.html
version/1.1/usage/: implementation.html  index.html  registration.html  schema.html  tutorial.html
version/dev/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/: index.rst.txt
version/dev/_sources/usage/: registration.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/getting-started/: index.html
version/dev/usage/: implementation.html  index.html  registration.html  schema.html  tutorial.html
version/stable/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html
version/stable/_sources/: changelog.rst.txt
version/stable/_sources/usage/: index.rst.txt
version/stable/_static/: search.json
version/stable/api/: index.html
version/stable/getting-started/: index.html
version/stable/usage/: registration.html  schema.html  tutorial.html
(+236 files in other folders)
