[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name="ansys-scade-pyalmgw"
version="1.0.dev0"
description ="Python toolbox for Ansys SCADE LifeCycle ALM Gateway."
readme="README.rst"

# only 3.7. and 3.10
requires-python = ">=3.7,!=3.8.*,!=3.9.*,<3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Ansys, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "Ansys, Inc.", email = "pyansys.core@ansys.com"},
]
dependencies=[
    "importlib-metadata >= 1.0; python_version < '3.8'",
    "importlib-metadata >= 4.0; python_version >= '3.8'",
    "ansys-scade-apitools",
    "lxml",
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
keywords=["Scade", "LifeCycle", "ALM Gateway"]

[project.optional-dependencies]
build = [
    "build==1.2.2.post1",
    "twine==5.1.1"
]
tests = [
    # 8.0.2 at most: https://github.com/microsoft/PTVS/issues/7853
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    # required for SCADE Display API
    "pyparsing",
]
doc = [
    "ansys-sphinx-theme[autoapi]==1.2.1",
    "autodoc_pydantic==2.2.0",
    "jupyter_sphinx==0.5.3",
    "nbsphinx==0.9.5",
    "numpydoc==1.8.0",
    "sphinx==8.1.3",
    "sphinx-autoapi<=3.3.3",
    "sphinx-autodoc-typehints==2.5.0",
    "sphinxcontrib-globalsubs==0.1.2",
    "sphinxcontrib-httpdomain==1.8.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-jinja==2.0.2",
    "sphinxnotes-strike==1.2.1",
]

[tool.flit.module]
name = "ansys.scade.pyalmgw"

[project.urls]
Source = "https://github.com/ansys/scade-pyalmgw"
Issues = "https://github.com/ansys/scade-pyalmgw/issues"
Discussions = "https://github.com/ansys/scade-pyalmgw/discussions"
Documentation = "https://pyalmgw.scade.docs.pyansys.com"
Releases = "https://github.com/ansys/scade-pyalmgw/releases"
Homepage = "https://www.ansys.com/products/embedded-software/ansys-scade-suite"

[project.scripts]
pyalmgw_stub_connector = "ansys.scade.pyalmgw.stub:main"

[tool.ruff]
line-length = 100
lint.select = [
    "E",    # pycodestyle, see https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://beta.ruff.rs/docs/rules/#pydocstyle-d
    "F",    # pyflakes, see https://beta.ruff.rs/docs/rules/#pyflakes-f
    "I",    # isort, see https://beta.ruff.rs/docs/rules/#isort-i
    "N",    # pep8-naming, see https://beta.ruff.rs/docs/rules/#pep8-naming-n
]
lint.ignore = [
    "D206",  # To ignore: conflict with the formatter
    "E501",  # Line too long. Ignoring this so "ruff.formatter" manages line length.
    "D203",  # One blank line required before class docstring.
    "D204",  # One blank line required after class docstring.
]

# TODO: "preserve" leads to an error, although it is documented
# and used in other repositories
[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys", "conftest", "test_utils"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D",]

[tool.coverage.run]
source = ["ansys.scade.pyalmgw"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "@(abc\\.)?abstractmethod",
    ]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-ra --cov=ansys.scade.pyalmgw --cov-report html:.cov/html --cov-branch --cov-report xml:.cov/xml --cov-report term -vv"

[tool.towncrier]
package = "ansys.scade.pyalmgw"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/scade-pyalmgw/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/scade-pyalmgw/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true
[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
